2007-11-06  Jonh Wendell <jwendell@gnome.org>

	Initial support to load .vnc files:

	* configure.ac: Added gnome-vfs as a dependency
	* src/vinagre-tab.c: Use "x-remote-connection" in recent connection
	* src/vinagre-main.c: Parse filenames as parameters ("-f" command line flag)
	* src/vinagre-connection.[ch]: vinagre_connection_new_from_file (): new function

2007-10-21  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c,
	* src/vinagre-window.h,
	* src/vinagre-notebook.c,
	* src/vinagre-window-private.h:
	  - Disable all shortcut keys when the cursor is grabbed, closes #485317.

2007-10-11  Jonh Wendell <jwendell@gnome.org>

	* data/Makefile.am
	  - Make use of $destdir, thanks to Mark Howard. (Closes #485397)

2007-10-10  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c,
	* src/vinagre-notebook.c:
	  - Adjust scrollbars in fullscreen mode

2007-10-09  Jonh Wendell <jwendell@gnome.org>

	* lots of files:
	  - Rename favorites to bookmarks (closes #477504)

2007-10-09  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-window.c,
	* data/Makefile.am,
	* data/vinagre.svg,
	* data/vinagre.desktop.in.in:
	  - In a near future, we will ship our own icon

2007-10-09  Jonh Wendell <jwendell@gnome.org>

	* lots of files:
	  - Keep recent connections around
	  - Other minor changes

2007-10-04  Jonh Wendell <jwendell@gnome.org>

	* configure.ac,
	* data/vinagre.glade,
	* src/vinagre-tab.c:
	  - Added gnome-keyring support.
	* src/vinagre-favorites.c:
	  - Don't save the password in the favorites file.
	* src/vinagre-window.c:
	  - Avoid a crash when exiting the application with more than one
	    tab opened.

2007-10-04  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c:
	  - Added bell support.

2007-10-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c,
	* src/vinagre-tab.h,
	* src/vinagre-ui.h,
	* data/vinagre-ui.xml:
	  - Added clipboard support (copy and paste)