@@ -23,6 +23,7 @@
   <menubar name="MenuBar">
     <menu name="MachineMenu" action="Machine">
       <menuitem name="MachineConnectMenu" action="MachineConnect"/>
+      <menuitem name="MachineOpenMenu" action="MachineOpen"/>
       <separator/>
       <menuitem name="MachineCloseMenu" action="MachineClose"/>
       <menuitem name="MachineTakeScreenshotMenu" action="MachineTakeScreenshot"/>
