@@ -1,3 +1,11 @@
+2007-11-07  Jonh Wendell <jwendell@gnome.org>
+
+	More hack on .vnc file format support:
+	
+	* data/vinagre-ui.xml,
+	* src/vinagre-commands.[ch],
+	* src/vinagre-ui.h: Added an "Open .VNC file" menu item.
+
 2007-11-06  Jonh Wendell <jwendell@gnome.org>
 
 	Initial support to load .vnc files:
